# nixclaw

./: .gitignore  HACKATHON_PLAN.md  README.md  flake.nix  pyproject.toml
docs/: integration.md
nix/: package.nix
openshell/: policy.yaml.in
schemas/nixclaw/v1/: benchmark-result.schema.json  common.schema.json  config-response.schema.json  config.schema.json  create-experiment-request.schema.json  create-experiment.schema.json  experiment-decision.schema.json  experiment-results.schema.json  experiment.schema.json  facts-response.schema.json  facts.schema.json  reviewed-proposal.schema.json  vllm-profile-patch.schema.json
schemas/nixclaw/v1/fixtures/: contract-fixtures.json
skills/nixclaw/: SKILL.md
src/nixclaw/: __init__.py  adversarial.py  benchmark.py  broker.py  cli.py  fixture.py  knowledge.py  models.py  optimizer.py  policy.py  scorecard.py
tests/: test_adversarial.py  test_benchmark.py  test_broker.py  test_contracts.py  test_knowledge.py  test_policy.py  test_scorecard.py
workloads/: agent-tool.json  agent-tools.json  host-signals.example.json  interactive.json
